Productize demo model configuration
